Solve some contrast issues

--- a/style.css
+++ b/style.css
@@ -26,9 +26,9 @@ label {
     background-color: #fff;
     width: 100%;
   }
-
+  
   header a {
-    color: #6070ff;
+    color: #0f27ff;
     font-weight: 700;
     font-size: 18px;
     line-height: 20px;
@@ -90,7 +90,7 @@ label {
   }
 
   .icon {
-    color: #6070ff;
+    color: #0f27ff;
   }
 
   li {
@@ -116,7 +116,7 @@ label {
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
-    color: #7f8cff;
+    color: #0a23ff;
     width: 100%;
     margin-top: 0;
     margin-bottom: 0;
@@ -286,7 +286,7 @@ label {
   }
 
   .tech_list li {
-    color: #6070ff;
+    color: #0f27ff;
     background-color: #ebebff;
     border-radius: 8px;
     padding: 4px 12px;
@@ -299,7 +299,7 @@ label {
     color: #396df2;
     margin-top: 3%;
     align-self: self-start;
-    border: 1px solid #6070ff;
+    border: 1px solid #0f27ff;
     padding: 12px;
     border-radius: 8px;
     background-color: white;
@@ -309,7 +309,7 @@ label {
 
   .btn_details:hover {
     color: #fff;
-    background-color: #6070ff;
+    background-color: #0f27ff;
   }
 
   .btn_details:active {
@@ -413,7 +413,7 @@ label {
     background-size: contain;
     background-position: right;
     background-repeat: no-repeat;
-    background-color: #6070ff;
+    background-color: #0f27ff;
     border-top-left-radius: 80px;
     color: #ebebff;
     padding-top: 6%;
@@ -513,7 +513,7 @@ label {
   }
 
   header a {
-    color: #6070ff;
+    color: #0f27ff;
     font-weight: 700;
     font-size: 18px;
     line-height: 20px;
@@ -538,7 +538,7 @@ label {
   }
 
   .icon {
-    color: #6070ff;
+    color: #0f27ff;
   }
 
   li {
@@ -570,7 +570,7 @@ label {
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
-    color: #7f8cff;
+    color: #0a23ff;
     width: 100%;
   }
 
@@ -671,7 +671,7 @@ label {
   }
 
   .tech_list li {
-    color: #6070ff;
+    color: #0f27ff;
     background-color: #ebebff;
     border-radius: 8px;
     padding: 4px 12px;
@@ -682,7 +682,7 @@ label {
   .btn_details {
     color: #396df2;
     align-self: self-start;
-    border: 1px solid #6070ff;
+    border: 1px solid #0f27ff;
     padding: 12px;
     border-radius: 8px;
     background-color: white;
@@ -692,7 +692,7 @@ label {
 
   .btn_details:hover {
     color: #fff;
-    background-color: #6070ff;
+    background-color: #0f27ff;
   }
 
   .btn_details:active {
@@ -793,7 +793,7 @@ label {
     background-position: right;
     background-size: contain;
     background-repeat: no-repeat;
-    background-color: #6070ff;
+    background-color: #0f27ff;
     padding-top: 20%;
     padding-left: 24px;
     padding-right: 24px;
